docs: update AGENTS.md with modern Java standards and migrate apps to markdown javadoc